# Quasar

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: testing.yml
app/api/: component.py  main.py  session.py  settings.py  utility.py
app/static/libraries/prism/: prism.css  prism.js
app/static/resources/attributes/: black.json  chrome.json  crystal.json  default.json  glass.json  gold.json  grass.json  plasma.json  rainbow.json  rock.json  yellow.json
app/static/resources/gradients/: black.json  cherry  cherry.json  coral.json  crystalline.json  forest.json  grass.json  grayscale.json  lawrencium.json  megatron.json  mud.json  rainbow.json  royal.json  sunset.json  white.json  yellows.json
app/static/sessions/: .gitignore
app/static/sessions/example/: render.json
app/static/styles/: base.css
app/templates/: base.html  index.html  session.html
app/templates/components/: widget.html
app/templates/plugins/default/: command.html  draggable.html  minimise.html  render.html  resize.html  session.html
app/templates/plugins/private/: test.html
app/templates/plugins/public/: action_log.html  browser.html  dynamic_level_assessment.html  scatter_plot.html
script/: process.py  stitch.py  test.py
src/: lib.rs  main.rs  session.rs
src/algebra/: direction.rs  matrix.rs  mod.rs  position.rs  rotation.rs  vector.rs
src/dom/: mod.rs  surface.rs  surface_loader.rs  tree.rs  tree_builder.rs  tree_settings.rs
src/geom/: cube.rs  mesh.rs  mod.rs  orientation.rs  ray.rs  side.rs  triangle.rs
src/geometry/: cube.rs  mesh.rs  mod.rs  ray.rs  side.rs  triangle.rs
src/parse/: mod.rs  png.rs  wavefront.rs
src/phys/: crossing.rs
src/render/: attribute.rs  attribute_builder.rs  attribute_linker.rs  camera.rs  camera_builder.rs  config.rs  data.rs  gradient_builder.rs  input.rs  mod.rs  output.rs  parameters.rs  parameters_builder.rs  run.rs  settings.rs  shader.rs  shader_builder.rs  surface.rs  surface_builder.rs
src/rt/: mod.rs  orientation.rs  ray.rs  scan.rs  side.rs
src/util/: loader.rs  progress_bar.rs
src/utility/: mod.rs
src/world/: mod.rs  surface_loader.rs
