[package]
name = "quasar"
version = "0.1.0"
edition = "2021"
description = "Let there be light"
repository = "https://github.com/FreddyWordingham/Quasar"
keywords = ["render", "physics", "simulation"]
categories = ["science", "simulation"]

[dependencies]
json5 = "0.4"
linemux = "0.2.3"
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }