[package]
name = "quasar"
version = "0.1.0"
edition = "2021"
description = "Let there be light"
repository = "https://github.com/FreddyWordingham/Quasar"
keywords = ["render", "physics", "simulation"]
categories = ["science", "simulation"]

[dependencies]
indicatif = "0.16.2"
itertools = "0.10.3"
json5 = "0.4"
linemux = "0.2.3"
nalgebra = "0.30.1"
ndarray = { version = "0.15", features = ["rayon"] }
palette = "0.6.0"
png = "0.17.5"
rayon= "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slice-of-array = "0.3.2"
tokio = { version = "1.17.0", features = ["full"] }