[package]
name = "quasar"
version = "0.1.0"
edition = "2021"
description = "Let there be light"
repository = "https://github.com/FreddyWordingham/Quasar"
keywords = ["render", "physics", "simulation"]
categories = ["science", "simulation"]

[dependencies]
atty = "0.2.14"
hex = "0.4"
indicatif = "0.16.2"
itertools = "0.10.3"
json5 = "0.4"
lazy_static = "1.4.0"
linemux = "0.2.3"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-stats = "0.5.0"
num_cpus = "1.13.1"
palette = "0.6.0"
png = "0.17.5"
rand  = "0.8.5"
rayon= "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slice-of-array = "0.3.2"
tokio = { version = "1.17.0", features = ["full"] }