[tool.poetry]
name = "quasar"
version = "0.1.0"
description = "Let there be light"
authors = ["Freddy Wordingham <f.wordingham@exeter.ac.uk>"]

[tool.poetry.dependencies]
fastapi = "^0.75.2"
Jinja2 = "^3.1.1"
python = "^3.8"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
